--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -11,3 +11,10 @@ retranslate_task:
   expected_output: >
     A well formatted translation from ItaliJapanesean to Korean.
   agent: translator_agent
+
+count_task:
+  description: >
+    Count the amount of letters in a sentence.
+  expected_output: >
+    The number of letters in the sentence.
+  agent: counter_agent
